# spinningup

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: ci.yml
docs/: conf.py
docs/spinningup/: exercise2_2_soln.rst  extra_tf_pg_implementation.rst  rl_intro.rst
docs/utils/: logger.rst
spinup/: __init__.py  run.py  user_config.py
spinup/algos/pytorch/ddpg/: core.py  ddpg.py
spinup/algos/pytorch/ppo/: core.py  ppo.py
spinup/algos/pytorch/sac/: core.py  sac.py
spinup/algos/pytorch/td3/: core.py  td3.py
spinup/algos/pytorch/vpg/: vpg.py
spinup/algos/tf1/ddpg/: core.py  ddpg.py
spinup/algos/tf1/ppo/: core.py  ppo.py
spinup/algos/tf1/sac/: core.py  sac.py
spinup/algos/tf1/td3/: core.py  td3.py
spinup/algos/tf1/trpo/: core.py  trpo.py
spinup/algos/tf1/vpg/: vpg.py
spinup/examples/pytorch/pg_math/: 1_simple_pg.py  2_rtg_pg.py
spinup/examples/tf1/: train_mnist.py
spinup/examples/tf1/pg_math/: 1_simple_pg.py  2_rtg_pg.py
spinup/exercises/pytorch/problem_set_1/: exercise1_1.py  exercise1_2.py  exercise1_2_auxiliary.py  exercise1_3.py
spinup/exercises/pytorch/problem_set_1_solutions/: exercise1_1_soln.py  exercise1_2_soln.py
spinup/exercises/pytorch/problem_set_2/: exercise2_2.py
spinup/exercises/tf1/problem_set_1/: exercise1_1.py  exercise1_2.py  exercise1_3.py
spinup/exercises/tf1/problem_set_1_solutions/: exercise1_1_soln.py  exercise1_2_soln.py
spinup/exercises/tf1/problem_set_2/: exercise2_2.py
spinup/utils/: logx.py  mpi_pytorch.py  mpi_tf.py  plot.py  run_utils.py  serialization_utils.py  test_policy.py
