[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup"
authors = [{ name = "Joshua Achiam" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
readme = "readme.md"
description = "Teaching tools for introducing people to deep RL."
dependencies = [
  "cloudpickle == 1.2.1",
  "gym[atari,box2d,classic_control] ~= 0.15.3",
  "ipython",
  "joblib",
  "keras ~= 2.5",
  "matplotlib",
  "mpi4py",
  "numpy",
  "pandas",
  "psutil",
  "scipy",
  "seaborn",
  "tensorflow",
  "torch",
  "tqdm",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
py-modules = ["spinup"]

[tool.setuptools.dynamic]
version = { attr = "spinup.version.__version__" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I"]
ignore = ["A001", "A002", "E402", "E722", "E731", "F401", "F821", "F841", "PLW0602", "PLW0603", "PLW3301"]
